hyphens: auto; does not line break a phrase containing a non-breaking space in a grid-child https://bugs.webkit.org/show_bug.cgi?id=279053 <rdar://problem/135685979>

Reviewed by Antti Koivisto.

Intrinsic min width computation ignores hyphenation which results in incorrect preferred width value.

tryBreakingAtHyphenationOpportunity returns early where there's absolutely no space for the content
which is correct for regular line breaking but not when trying to figure out the minimum width value.

* LayoutTests/fast/inline/min-content-width-with-hypens-expected.html: Added.
* LayoutTests/fast/inline/min-content-width-with-hypens.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::firstHyphenPosition): This is similar to legacy's hyphenation handling -finding the first hyphenation position.
(WebCore::Layout::InlineContentBreaker::tryBreakingTextRun const):

Canonical link: https://commits.webkit.org/283449@main